# puccinia

./: .env  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  example.toml
alpha_vantage/: Cargo.toml
alpha_vantage/src/: crypto_daily.rs  daily.rs  daily_adjusted.rs  lib.rs  monthly.rs  monthly_adjusted.rs  weekly.rs  weekly_adjusted.rs
doc/: database.md  features.md  roadmap.md
examples/: coinnect.rs  diesel.rs  example.rs  secret.rs
migrations/2018-01-16-025944_create/: down.sql  up.sql
migrations/2018-06-03-151850_position_transactions/: down.sql  up.sql
migrations/2018-06-03-183116_position_prices/: down.sql  up.sql
migrations/2021-01-01-163453_transfers/: down.sql  up.sql
src/: custom.rs  import.rs  lib.rs  main.rs  ofx.rs
src/bank/: amex.rs  charles_schwab.rs  chase.rs  fidelity.rs  fidelity_nb.rs  mod.rs  tangerine.rs  usaa.rs  usaa_inv.rs  vanguard.rs
src/crypto/: mod.rs
src/crypto/bitcoin/: blockchain_info.rs  mod.rs
src/database/: mod.rs  models.rs  schema.rs
src/ofx/: mod.rs  request.rs  response.rs
src/ofx/bank/: amex.rs  mod.rs  tangerine.rs  usaa.rs  vanguard.rs
src/server/: account.rs  bank.rs  crypto.rs  custom.rs  index.rs  json.rs  main.rs  position.rs  template.rs  transaction.rs  wallet.rs
static/: account.js  chart.html  chart.js  index.js  position.js  style.css  table.html  util.js  wallet.js
templates/: account.html.hbs  bank_account.html.hbs  bank_index.html.hbs  crypto.html.hbs  custom.html.hbs  index.html.hbs  position.html.hbs  transaction.html.hbs  wallet.html.hbs
