[package]
name = "puccinia"
version = "0.1.0"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]

[[bin]]
name = "puccinia_server"
path = "src/server/main.rs"

[dependencies]
chrono = "0.4.2"
coinnect = "0.5.10"
dotenv = "0.13.0"
handlebars = "0.32.4"
mime = "0.3.7"
rand = "0.5.0"
reqwest = "0.8.6"
rust_decimal = "0.9.0"
serde = "1.0.65"
serde_derive = "1.0.65"
toml = "0.4.6"

[dependencies.diesel]
version = "1.3.0"
features = ["sqlite"]

[dependencies.actix-web]
version = "0.6"
features = ["tls"]

[dependencies.xml-rs]
version = "0.7"
path = "xml-rs"
