[package]
name = "puccinia"
version = "0.1.0"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]

[[bin]]
name = "puccinia_server"
path = "src/server/main.rs"

[dependencies]
chrono = "0.4.3"
coinnect = "0.5.12"
dotenv = "0.13.0"
handlebars = "0.32.4"
mime = "0.3.7"
rand = "0.5.1"
reqwest = "0.9.3"
rust_decimal = "0.9.1"
serde = "1.0.66"
serde_derive = "1.0.66"
toml = "0.4.6"

[dependencies.alpha_vantage]
version = "0.1"
path = "alpha_vantage"

[dependencies.actix-web]
version = "0.6.13"
features = ["alpn"]

[dependencies.diesel]
version = "1.3.2"
features = ["sqlite"]

[dependencies.openssl]
version = "0.10.14"
features = ["v111"]

[dependencies.xml-rs]
version = "0.7"
path = "xml-rs"
