[package]
name = "puccinia"
version = "0.1.0"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]

[[bin]]
name = "puccinia_server"
path = "src/server/main.rs"

[dependencies]
actix-files = "0.1.7"
actix-web = "1.0.9"
chrono = "0.4.10"
coinnect = "0.5.12"
dotenv = "0.15.0"
handlebars = "2.0.4"
mime = "0.3.16"
rand = "0.7.3"
reqwest = "0.9.3"
rust_decimal = "1.1.0"
serde = "1.0.104"
serde_derive = "1.0.104"
toml = "0.5.5"

[dependencies.alpha_vantage]
version = "0.1"
path = "alpha_vantage"

[dependencies.diesel]
version = "1.4.3"
features = ["sqlite"]

[dependencies.openssl]
version = "0.10.26"
features = ["v111"]

[dependencies.xml-rs]
version = "0.7"
path = "xml-rs"
